# google-docs-mcp-rs

./: Cargo.toml  README.md
src/: constants.rs  lib.rs  main.rs
src/api/: client.rs
src/models/: document.rs
src/tools/: documents.rs  mod.rs
